[workspace]
resolver = "2"
members = ["bin/*", "libs/*", "plugins/*"]
exclude = ["bin/npm", "tests/test-server"]

[workspace.dependencies]
tokio = "1.41.0"
futures = "0.3.31"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132" }
tracing = "0.1.40"
http = "1.1.0"
http-body = "1.0.1"
bytes = "1.8.0"
async-trait = "0.1.83"
anyhow = "1.0.91"
reqwest = "0.12.8"
thiserror = "1.0.58"
reqwest-middleware = "0.3.3" 
tracing-subscriber = "0.3.18"
base64 = "0.22.1"
schemars = "0.8.16"
graphql-parser = { git = "https://github.com/graphql-rust/graphql-parser.git", rev = "f75d96f1e026d0fb993944793916c1cd0597f44c" }
vrl = { git = "https://github.com/dotansimha/vrl.git", rev = "d59b2f66727d3c345b4202b94265c580dfd0f0e9", default-features = false, features = [
  "string_path",
  "compiler",
  "value",
  "stdlib",
] }
fastrace = "0.7.4"

[profile.release.package.conductor-cf-worker]
strip = true
codegen-units = 1

[patch.crates-io]
graphql-parser = { git = "https://github.com/graphql-rust/graphql-parser.git", rev = "f75d96f1e026d0fb993944793916c1cd0597f44c" }
