[package]
name = "query_planner"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "planner"
path = "src/main.rs"


[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
async-graphql = { version = "6.0.0", features = ["dynamic-schema"]}
async-trait = "0.1.71"
anyhow = "1.0.71"
graphql-parser = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
linked-hash-map = "0.5.4"