[package]
name = "query_planner"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "planner"
path = "src/main.rs"
bench = false

[lib]
bench = false


[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
async-graphql = { version = "6.0.0", features = ["dynamic-schema"]}
async-trait = "0.1.71"
anyhow = "1.0.71"
graphql-parser = "0.4.0"
# TODO: use hyper client instead, `reqwest` is a high level layer on top of it, and we'd rather have the best performance!
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.31.0", features = ["full"] }
linked-hash-map = "0.5.4"
rayon = "1.5.3"
futures = "0.3.28"


[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "json"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false