[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.11"
async-graphql-actix-web = "6.0.11"
actix-web = { version = "4.4.1", default-features = false, features = ["macros"] }