
[package]
name = "async_runtime"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4" }
send_wrapper = { version = "0.6", features = ["futures"] }
reqwest = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.34.0" }
reqwest = { workspace = true }
