[package]
name = "benches"
version = "0.0.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
conductor = { path = "../conductor" }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = "1.34.0"
hyper = "0.14.27"

[[bench]]
name = "bench"
path = "bench.rs"
harness = false
