[package]
name = "conductor_engine"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
conductor_common = { path = "../common" }
conductor_config = { path = "../config" }
async_runtime = { path = "../async_runtime" }
matchit = "0.7.3"
reqwest = { workspace = true }
