[package]
name = "benches"
version = "0.0.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
conductor = { path = "../../bin/conductor" }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = "0.14.28"
tokio = { version = "1.35.0", features = ["full"] }

[[bench]]
name = "bench"
path = "bench.rs"
harness = false
