[package]
name = "conductor_common"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
test_utils = []

[dependencies]
vrl = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
graphql-parser = "0.4.0"
mime = "0.3.17"
url = "2.5.0"
querystring = "1.1.0"
