[package]
name = "conductor_common"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
test_utils = []

[dependencies]
vrl = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
graphql-parser = { workspace = true }
tokio = { workspace = true }
graphql-tools = "0.2.5"
mime = "0.3.17"
url = "2.5.0"
querystring = "1.1.0"
once_cell = "1.19.0"
minitrace = { workspace = true }
lazy_static = "1.4.0"
