[package]
name = "conductor_config"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "generate-config-schema"
path = "src/generate-json-schema.rs"

[dependencies]
schemars = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.29"
regex = "1.10.2"
conductor_common = { path = "../common" }
# Conductor plugins, referenced here because we are using it to compose the final config struct
cors_plugin = { path = "../../plugins/cors" }
vrl_plugin = { path = "../../plugins/vrl" }
disable_introspection_plugin = { path = "../../plugins/disable_introspection" }
persisted_documents_plugin = { path = "../../plugins/persisted_documents" }
graphiql_plugin = { path = "../../plugins/graphiql" }
http_get_plugin = { path = "../../plugins/http_get" }
