[package]
name = "conductor_config"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "generate-config-schema"
path = "src/generate-json-schema.rs"

[dependencies]
schemars = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.33"
regex = "1.10.4"
conductor_common = { path = "../common" }
conductor_tracing = { path = "../tracing" }
conductor_logger = { path = "../logger" }
# Conductor plugins, referenced here because we are using it to compose the final config struct
cors_plugin = { path = "../../plugins/cors" }
vrl_plugin = { path = "../../plugins/vrl" }
disable_introspection_plugin = { path = "../../plugins/disable_introspection" }
trusted_documents_plugin = { path = "../../plugins/trusted_documents" }
graphiql_plugin = { path = "../../plugins/graphiql" }
graphql_validation_plugin = { path = "../../plugins/graphql_validation" }
http_get_plugin = { path = "../../plugins/http_get" }
jwt_auth_plugin = { path = "../../plugins/jwt_auth" }
humantime-serde = "1.1.1"
telemetry_plugin = { path = "../../plugins/telemetry" }
http-serde = "1.1.3"
