[package]
name = "conductor_engine"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
test_utils = []

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
vrl = { workspace = true }

conductor_common = { path = "../common" }
conductor_config = { path = "../config" }
wasm_polyfills = { path = "../wasm_polyfills" }
cors_plugin = { path = "../../plugins/cors" }
trusted_documents_plugin = { path = "../../plugins/trusted_documents" }
disable_introspection_plugin = { path = "../../plugins/disable_introspection" }
graphiql_plugin = { path = "../../plugins/graphiql" }
http_get_plugin = { path = "../../plugins/http_get" }
match_content_type_plugin = { path = "../../plugins/match_content_type" }
vrl_plugin = { path = "../../plugins/vrl" }
jwt_auth_plugin = { path = "../../plugins/jwt_auth" }
