[package]
name = "conductor_engine"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
test_utils = []

[dependencies]
ureq = "2.9.6"
humantime = "2.1.0"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
vrl = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
conductor_common = { path = "../common" }
conductor_config = { path = "../config" }
conductor_tracing = { path = "../tracing" }
wasm_polyfills = { path = "../wasm_polyfills" }
cors_plugin = { path = "../../plugins/cors" }
trusted_documents_plugin = { path = "../../plugins/trusted_documents" }
disable_introspection_plugin = { path = "../../plugins/disable_introspection" }
graphiql_plugin = { path = "../../plugins/graphiql" }
http_get_plugin = { path = "../../plugins/http_get" }
match_content_type_plugin = { path = "../../plugins/match_content_type" }
vrl_plugin = { path = "../../plugins/vrl" }
jwt_auth_plugin = { path = "../../plugins/jwt_auth" }
federation_query_planner = { path = "../../libs/federation_query_planner" }
telemetry_plugin = { path = "../../plugins/telemetry" }
graphql_validation_plugin = { path = "../../plugins/graphql_validation" }
fastrace = { workspace = true }
fastrace_reqwest = { path = "../fastrace_reqwest" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
