[package]
name = "federation_query_planner"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
serde = { workspace = true }
wasm_polyfills = { path = "../wasm_polyfills" }
conductor_tracing = { path = "../tracing" }
conductor_common = { path = "../common" }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
graphql-parser = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
linked-hash-map = "0.5.6"
futures = { workspace = true }
lazy_static = "1.4.0"
tracing = { workspace = true }
async-graphql = { version = "7.0.1", features = ["dynamic-schema"] }
minitrace = { workspace = true }
minitrace_reqwest = { path = "../minitrace_reqwest" }

[dev-dependencies]
insta = { version = "1.36.1", features = ["yaml", "json"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
tokio = { workspace = true, features = ["full"] }
