[package]
edition = "2021"
name = "graphql-conductor_lib"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.1", default-features = false, features = ["napi4"] }
napi-derive = "2.16.1"
conductor = { path = "../../bin/conductor" }
actix-web = "4.5.1"

[build-dependencies]
napi-build = "2.1.2"

