[package]
edition = "2021"
name = "graphql-conductor_lib"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.13", default-features = false, features = ["napi4"] }
napi-derive = "2.16.12"
conductor = { path = "../../bin/conductor" }
actix-web = "4.9.0"

[build-dependencies]
napi-build = "2.1.3"

