[package]
name = "smoke_tests"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
conductor_common = { path = "../common", features = ["test_utils"] }
serde = { workspace = true }
serde_json = { workspace = true }
insta = "1.40.0"
lazy_static = "1.5.0"
serial_test = "3.1.1"

[features]
binary = []
wasm = []
