[package]
name = "conductor_tracing"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
conductor_common = { path = "../common" }
wasm_polyfills = { path = "../wasm_polyfills" }
tracing-subscriber = { workspace = true, features = ['time', 'json'] }
opentelemetry = { version = "0.21.0" }
opentelemetry_sdk = { version = "0.21.1", features = ["trace"] }
tracing-opentelemetry = "0.22.0"
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
task-local-extensions = "0.1.4"
atty = "0.2.14"
minitrace = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = "0.1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
