[package]
name = "conductor_tracing"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
test_utils = []

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
conductor_common = { path = "../common" }
wasm_polyfills = { path = "../wasm_polyfills" }
opentelemetry = { version = "0.27.0" }
opentelemetry_sdk = { version = "0.27.0", features = ["trace"] }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
task-local-extensions = "0.1.4"
fastrace = { workspace = true }
rand = "0.8.5"
