[package]
name = "wasm_polyfills"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.45" }
send_wrapper = { version = "0.6.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
