[package]
name = "http_get_plugin"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
conductor_common = { path = "../../libs/common" }
schemars = { workspace = true }
urlencoding = "2.1.3"
futures = { workspace = true }
