[package]
name = "match_content_type_plugin"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
conductor_common = { path = "../../libs/common" }
schemars = { workspace = true }
futures = { workspace = true }
no_deadlocks = { workspace = true }
