[package]
name = "opentelemetry_plugin"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
conductor_common = { path = "../../libs/common" }
conductor_tracing = { path = "../../libs/tracing" }
schemars = { workspace = true }
humantime-serde = "1.1.1"
opentelemetry = { version = "0.21.0", features = ["trace"] }
minitrace-opentelemetry = { git = "https://github.com/dotansimha/minitrace-rust.git", rev = "2e0883e4b713dd18ebcede3f71414bb11a166ac9" }
minitrace = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opentelemetry_sdk = { version = "0.21.2", features = ["trace"] }
opentelemetry-otlp = { version = "0.14.0" }
